corrected spacing

--- a/style.css
+++ b/style.css
@@ -2,12 +2,20 @@
 body {
   background-color: hsl(0, 0%, 35%);
 }
+#me {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+h1 {
+  text-align: center;
+}
 #topics {
+  margin: 0;
   border: 3px solid hsl(0, 0%, 0%);
   columns: 2;
 }
 .topicsH {
   text-align: center;
-  text-rendering: ;
   border-bottom: 3px solid hsl(0, 0%, 0%);
 }
